# mcjs

./: .gitignore  Cargo.toml  analysis.txt  future.txt  rustfmt.toml  todos.txt  watch.sh
mcjs_inspector/: Cargo.toml  build.rs  package-lock.json  watch.sh  watch_tailwind.sh
mcjs_inspector/data/assets/: script.js  style.css
mcjs_inspector/data/input/: style.css
mcjs_inspector/data/templates/: core_dump.html  index.html
mcjs_inspector/src/: main.rs
mcjs_inspector/templates/: core_dump.html  index.html  page.html
mcjs_inspector/ui/: hello.slint
mcjs_test262/: Cargo.toml  check.sh  status.txt  summary.py  tests.yml.sample
mcjs_test262/scripts/: .gitignore  common.rb  compare.rb  compare.sh  debug.sh  failures.sh  gen_status_page.erb  greenlight.txt  import_data.py  import_outcome.rb  just-the-greenlight.sh  list_failures.sh  mk_report.rb  out.json  recreate_extras.rb  recreate_views.rb  run.sh  run_multi.rb  scan_test262.rb  status.sh  status.txt  summary.py  test-cases.txt  testlist2json.sh  tests.json  update.sh
mcjs_test262/src/: main.rs
mcjs_tools/: Cargo.toml  mockup-server.js  package-lock.json  package.json  tailwind.config.js  watch.sh
mcjs_tools/data/assets/: script.js  style.css
mcjs_tools/data/input/: style.css
mcjs_tools/src/: main.rs
mcjs_tools/templates/: breakpoints.html  core_dump.html  error.html  fragment.html  frame_view.html  function_bytecode.html  index.html  mockup.ejs  mockup.html  page.html  sidebar.html
mcjs_vm/: Cargo.toml  breakpoints benchmark.txt  plan.txt
mcjs_vm/src/: bootstrap.js  bytecode.rs  bytecode_compiler.rs  common.rs  fs.rs  heap.rs  inspector_case.rs  interpreter.rs  lib.rs  loader.rs  stack.rs  stack_access.rs  tracing.rs  util.rs
mcjs_vm/src/bytecode/: builder.rs  simple_builder.rs
mcjs_vm/src/bytecode_compiler/: js_to_past.rs  legacy.rs  past_to_bytecode.rs
mcjs_vm/src/bytecode_compiler/snapshots/: mcjs_vm__bytecode_compiler__js_to_past__tests__func_decl.snap  mcjs_vm__bytecode_compiler__js_to_past__tests__function_before_let.snap  mcjs_vm__bytecode_compiler__js_to_past__tests__function_in_non_allowed_position.snap  mcjs_vm__bytecode_compiler__js_to_past__tests__function_in_non_allowed_position.snap.new  mcjs_vm__bytecode_compiler__js_to_past__tests__global_var.snap  mcjs_vm__bytecode_compiler__js_to_past__tests__simple_for.snap  mcjs_vm__bytecode_compiler__past_to_bytecode__tests__func_decl.snap  mcjs_vm__bytecode_compiler__past_to_bytecode__tests__function_before_let.snap
mcjs_vm/src/interpreter/: builtins.rs  mod.rs  stack.rs  tests.rs
mcjs_vm/src/jit/: builder.rs  mod.rs  tracking.rs
mcjs_vm/src/jit/codegen/: mod.rs
mcjs_vm/src/snapshots/: mcjs_vm__bytecode_compiler__past__tests__func_decl.snap  mcjs_vm__bytecode_compiler__past__tests__function_before_let.snap  mcjs_vm__bytecode_compiler__past__tests__global_var.snap  mcjs_vm__bytecode_compiler__past_compiler__tests__func_decl.snap  mcjs_vm__bytecode_compiler__past_compiler__tests__function_before_let.snap  mcjs_vm__tracing__internal__tests__section.snap  mcjs_vm__tracing__tests__section.snap
mcjs_vm/src/util/: formatter.rs
mcjs_vm/test-resources/json5/: test_parse.mjs  test_stringify.mjs
mcjs_vm/test-resources/test-scripts/debugging/: breakme-0.js  breakpoint-bench.js
mcjs_vm/test-resources/test-scripts/json5/: json5  test_parse.mjs  test_stringify.mjs  test_stringify__node.mjs
mcjs_vm/tests/: debugging.rs  json5_parse.rs
src/: bytecode.rs  bytecode_compiler.rs  common.rs  fs.rs  heap.rs  inspector_case.rs  interpreter.rs  jit.rs  lib.rs  regalloc.rs  stack.rs  stack_access.rs  util.rs
src/jit/: builder.rs  codegen.rs  loop_hoist.rs  mod.rs  regalloc.rs  tracking.rs
src/jit/codegen/: mod.rs
test-resources/test-scripts/json5/: test_stringify.mjs
tests/: json5_parse.rs
trag/: .gitignore  ddl.go  go.mod  query.sql  schema.sql  sqlc.yaml  test-cases-now.txt
trag/cmd/trag/: charts.html  main.go
trag/pkg/trag/db/: models.go  query.sql.go
trag/scripts/: compare.sh  debug.sh  failures.sh  status.sh  versions.py
