[package]
name = "mcjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynasm = "1.2.3"
dynasmrt = "1.2.3"
lazy_static = "1.4.0"
slotmap = "1.0.6"
swc_atoms = "0.4.34"
swc_common = "0.29.28"
swc_ecma_ast = "0.96.2"
swc_ecma_parser = "0.124.4"
