[package]
name = "mcjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynasm = "1.2.3"
dynasmrt = "1.2.3"
lazy_static = "1.4.0"
rand = "0.8.5"
slotmap = "1.0.6"
strum = "0.24.1"
strum_macros = "0.24.3"
swc_atoms = "0.4.34"
swc_common = "0.29.28"
swc_ecma_ast = "0.96.2"
swc_ecma_parser = "0.124.4"

[dev-dependencies]
iced-x86 = "1.18.0"
proptest = "1.1.0"
rand = "0.8.5"

