[package]
name = "mcjs_inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcjs_vm = { path = "../mcjs_vm", features = ["inspection"] }

anyhow = "1.0"
rmp-serde = "1.1"
serde = "1.0"

axum = { version = "0.6.18", features = ["macros"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.17"
tera = "1.19.0"
tracing = "0.1.37"
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["fs"] }



