[package]
name = "mcjs_inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcjs_vm = { path = "../mcjs_vm", features = ["inspection"] }

anyhow = "1.0"
rmp-serde = "1.1"

actix-web = "4.3.1"
actix-files = "0.6.2"
tokio = "1.29.1"
env_logger = "0.10.0"
askama = "0.12.0"
serde = "1.0"   # { version = "1.0", features = ["derive"] }
listenfd = "1.0.1"

[profile.dev.package.askama_derive]
opt-level = 3
