[package]
name = "mcjs_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcjs_vm = { path = "../mcjs_vm", features = ["debugger"] }

rand = "0.8.5"
tokio = { version = "1.33", features = ["sync"] }
anyhow = "1.0.75"
swc_common = "~0.31.0"
env_logger = "0.10.1"
egui = "0.24.1"
eframe = "0.24.1"



