[package]
name = "mcjs_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcjs_vm = { path = "../mcjs_vm", features = ["debugger", "tracing"] }

anyhow = "1.0.75"
swc_common = "~0.31.0"
env_logger = "0.10.1"
egui = { version = "0.26", default-features = false }
eframe = { version = "0.26", default-features = false, features = ["default_fonts", "glow", "wayland", "puffin"] } 
egui_tiles = "0.7.2"
serde = "1.0.197"
thiserror = "1.0.57"
dirs = "5.0.1"
rmp-serde = "1.1.2"

jemallocator = "0.5"

