[package]
name = "mcjs_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynasm = "~2.0"
dynasmrt = "~2.0"
lazy_static = "~1.4.0"
rand = "~0.8.5"
slotmap = "~1.0.6"
swc_atoms = "~0.5.6"
swc_common = "~0.31.0"
swc_ecma_ast = "~0.106.0"
swc_ecma_parser = "~0.136.0"
swc_ecma_visit = "~0.92.0"
serde = "1.0"
rmp-serde = "1.1"
strum = { version = "0.25.0", features = ["derive"] }
json = "0.12.4"
regress = { version = "0.10", features = ["utf16"] }

[dev-dependencies]
iced-x86 = "~1.18.0"
insta = "1.34.0"
proptest = "~1.1.0"

[features]
debugger = []
tracing = []


